# ed25519

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: add_scalar.c  keypair.c  sign.c  verify.c
